--- a/Tools/gestao-de-convidados/Widget-card-resumo.html
+++ b/Tools/gestao-de-convidados/Widget-card-resumo.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AC — Widget Resumo</title>
-  <link rel="stylesheet" href="https://rawcdn.githack.com/fabiocolletto/Projeto-marco/main/Tools/gestao-de-convidados/ac.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fabiocolletto/Projeto-marco@main/Tools/gestao-de-convidados/ac.css" />
 </head>
 <body>
   <main class="ac">
