--- a/tools/gestao-de-convidados/widget-shell.html
+++ b/tools/gestao-de-convidados/widget-shell.html
@@ -72,41 +72,130 @@
         "https://rawcdn.githack.com/fabiocolletto/Projeto-marco/main/tools/gestao-de-convidados/app.html"
       ];
 
+      const ATTEMPT_TIMEOUT = 10000;
+
       const frame = document.getElementById("gestao-eventos-frame");
       const fallbackTemplate = document.getElementById("fallback-template");
 
-      async function selectSource() {
-        for (const url of APP_SOURCES) {
-          try {
-            const response = await fetch(url, {
-              method: "GET",
-              mode: "cors",
-              cache: "no-store"
-            });
-
-            if (response.ok) {
-              return url;
-            }
-          } catch (error) {
-            console.warn("Falha ao carregar fonte", url, error);
+      const allowedOrigins = APP_SOURCES.reduce((origins, src) => {
+        try {
+          const origin = new URL(src).origin;
+          if (!origins.includes(origin)) {
+            origins.push(origin);
           }
+        } catch (err) {
+          console.warn("URL inválida configurada", src, err);
         }
+        return origins;
+      }, []);
 
-        return null;
+      let currentAttempt = null;
+      let timeoutId = null;
+      let fallbackVisible = false;
+
+      function clearTimer() {
+        if (timeoutId) {
+          clearTimeout(timeoutId);
+          timeoutId = null;
+        }
       }
 
-      (async () => {
-        const source = await selectSource();
+      function showFallback() {
+        if (fallbackVisible) {
+          return;
+        }
+        fallbackVisible = true;
+        clearTimer();
+        frame.setAttribute("hidden", "hidden");
+        const fallback = fallbackTemplate.content.cloneNode(true);
+        document.body.appendChild(fallback);
+      }
 
-        if (source) {
-          frame.src = source;
+      function withCacheBuster(url) {
+        const separator = url.includes("?") ? "&" : "?";
+        return `${url}${separator}v=${Date.now()}`;
+      }
+
+      function getSignature(url) {
+        try {
+          const parsed = new URL(url);
+          return `${parsed.origin}${parsed.pathname}`;
+        } catch {
+          return null;
+        }
+      }
+
+      function loadFromIndex(index) {
+        if (index >= APP_SOURCES.length) {
+          showFallback();
           return;
         }
 
-        const fallback = fallbackTemplate.content.cloneNode(true);
-        document.body.innerHTML = "";
-        document.body.appendChild(fallback);
-      })();
+        const baseUrl = APP_SOURCES[index];
+        let finalUrl = baseUrl;
+
+        try {
+          finalUrl = withCacheBuster(baseUrl);
+        } catch (err) {
+          console.warn("Não foi possível preparar URL", baseUrl, err);
+        }
+
+        currentAttempt = {
+          index,
+          url: finalUrl,
+          signature: getSignature(baseUrl)
+        };
+
+        frame.removeAttribute("hidden");
+        frame.src = finalUrl;
+
+        clearTimer();
+        timeoutId = setTimeout(() => {
+          if (!currentAttempt || currentAttempt.index !== index) {
+            return;
+          }
+          loadFromIndex(index + 1);
+        }, ATTEMPT_TIMEOUT);
+      }
+
+      window.addEventListener("message", (event) => {
+        if (event.source !== frame.contentWindow) {
+          return;
+        }
+
+        if (!allowedOrigins.includes(event.origin)) {
+          return;
+        }
+
+        const data = event.data;
+        if (!data || typeof data !== "object") {
+          return;
+        }
+
+        if (!currentAttempt) {
+          return;
+        }
+
+        const hrefSignature = typeof data.href === "string" ? getSignature(data.href) : null;
+        if (hrefSignature && currentAttempt.signature && hrefSignature !== currentAttempt.signature) {
+          return;
+        }
+
+        if (data.type === "gestao-eventos-app:ready") {
+          clearTimer();
+          currentAttempt = null;
+          return;
+        }
+
+        if (data.type === "gestao-eventos-app:error") {
+          clearTimer();
+          const nextIndex = currentAttempt.index + 1;
+          currentAttempt = null;
+          loadFromIndex(nextIndex);
+        }
+      });
+
+      loadFromIndex(0);
     </script>
   </body>
 </html>
