Add shared list utilities and ensure local module loading

--- a/tools/gestao-de-convidados/convidados.html
+++ b/tools/gestao-de-convidados/convidados.html
@@ -121,6 +121,7 @@
   const PATH_STORE = "/shared/projectStore.js";
   const PATH_INV   = "/shared/inviteUtils.js"; // ferramenta de convites (fonte de verdade)
   const CANDIDATES = [
+    window.location.origin,
     "https://cdn.jsdelivr.net/gh/fabiocolletto/Projeto-marco@main",
     "https://rawcdn.githack.com/fabiocolletto/Projeto-marco/main"
   ];
